--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -192,7 +192,7 @@
               <div class="col-xs-12">
                 <h2 class="slider">Explore the regions below</h2>
                 <p class="click">Please click on each circle</p>
-                <p><%=raw @location.side_body %></p>
+                <!--<p><#%=raw @location.side_body %></p>-->
                 <div id="locations_slider">
                   <% child_locations.each do |child| %>
                     <div class="slide">
