--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -65,4 +65,9 @@
 
 <script type="text/javascript">(function(){var sb=document.createElement('script');sb.type='text/javascript';sb.async=true;sb.src='https://s3.amazonaws.com/z_437er23a/f9b2782c2.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(sb,s);})();</script>
  <%= include_recaptcha_js %>
+ 
+ <!-- Start of tailormadeafricachat Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7c341ca7-3645-4cc9-a144-b880eadafb1b"> </script>
+<!-- End of tailormadeafricachat Zendesk Widget script -->
+
 </head>
