--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -131,7 +131,7 @@
         <ul class="list list-inline">
           <li><a href="<%= face %>" target="_blank"><img alt="facebook" src="/assets/facebook.gif"></a></li>
           <li><a href="<%= twit %>" target="_blank"><img alt="twitter" src="/assets/twitter.gif"></a></li>
-          <li><a href="<#= ins %>" target="_blank"><img alt="instagram" src="/assets/instagram.gif"></a></li>
+          <li><a href="<%= ins %>" target="_blank"><img alt="instagram" src="/assets/instagram.gif"></a></li>
         </ul>
       </div>
     </div>
