--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -147,10 +147,9 @@
             :css => 'list list-inline hidden-xs'
         }) %>
         <img alt="logo" src="/assets/main-logo-text-grey.png" class="logo">
-        <!--<div class="hidden-xs"><img alt="atol" src="/assets/atol.gif"></div>-->
-        <div class="copyright">
-          © Tailormade Africa &bull; All Rights Reserved &bull; <a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/privacy-policy">Privacy Policy</a><br/>
-          <a href="/bookings/new">Booking Form</a> &bull; <a href="/accommodations">Accommodation</a> &bull; <a href="/consumer-financial-protection">Consumer Financial Protection</a>
+        <div class="hidden-xs"><img alt="atol" src="/assets/atol.gif"></div>
+          <div class="copyright">© Tailormade Africa &bull; All Rights Reserved &bull; <a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/privacy-policy">Privacy Policy</a><br/>
+          <a href="/bookings/new">Booking Form</a> &bull; <a href="/accommodations">Accommodation</a> &bull; <a href="/consumer-financial-protection">Consumer Financial Protection</a></div>
         </div>
       </div>
     </div>
