--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -18,7 +18,7 @@
         <li><a href="tel:+447809726266"><img alt="phone" src="/assets/phone.png"></a></li>
         <li><a href="mailto:<%= email %>"><img alt="envelope" src="/assets/envelope.png"></a></li>
       </ul>
-      <a class="navbar-brand hidden-xs hidden-md" href="#"><img src="/assets/main-logo-top-small.png" class="main-logo"></a>
+      <a class="navbar-brand hidden-xs hidden-md" href="/"><img src="/assets/main-logo-top-small.png" class="main-logo"></a>
     </div>
 		
     <div class="collapse navbar-collapse -nav">
