--- a/app/views/refinery/newsletter/shared/_posts.html.erb
+++ b/app/views/refinery/newsletter/shared/_posts.html.erb
@@ -1,17 +1,17 @@
 
 <% if @posts.many? %>
 <div class="newsletter_rhs">
-  <h2><%= t('.other') %></h2>
-  <ul id="newsletter_posts" class=" list-inline list-unstyled">
+  <h2>Newsletter Archive</h2>
+  <div id="newsletter_posts">
     <% @posts.each do |newsletter_post| %>
     <a href="<%=  refinery.newsletter_post_path(newsletter_post) %>">
-      <li class="search-item">
-          <%= image_fu(newsletter_post.image, "105x80#c", :alt => newsletter_post.image.alt_tag) %>
-          <div class="search-item-body">
+
+          <%= image_fu(newsletter_post.image, "52x40#c")%>
+       
+
             <h3><%= strip_tags(newsletter_post.title) %></h3>
-            <div class="description hidden-xs hidden-md"><%=raw newsletter_post_teaser(newsletter_post) %></div>
-          </div>
-      </li></a>
+
+      </a>
     <% end %>
   </ul>
   </div>
