--- a/app/views/layouts/accommodations.html.erb
+++ b/app/views/layouts/accommodations.html.erb
@@ -4,6 +4,11 @@
   <%= render '/refinery/head' %>
   <body id="container">
     
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGZ8MVM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+    
     <%= site_bar -%>
     <%= render '/refinery/ie6check' if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
 
