--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,6 +3,11 @@
 <% site_bar = render('/refinery/site_bar', :head => true) -%>
 <%= render '/refinery/head' %>
   <body id="home_page">
+    
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGZ8MVM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <%= site_bar -%>
   <%= render '/refinery/ie6check' if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
   <%= render '/refinery/header' -%>
