--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -40,8 +40,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <!--<script src="http://code.jquery.com/jquery.js"></script>-->
 
-  <%= render '/refinery/google_analytics' %>
-
   <%= javascript_include_tag 'modernizr-min' %>
 
   <script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
@@ -49,19 +47,19 @@
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <!--<script src="http://code.jquery.com/jquery.js"></script>-->
 
+<!-- Google Tag Manager -->
+
 <script>
 
-(function(h,o,t,j,a,r){
-  h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-  h._hjSettings={hjid:328787,hjsv:5};
-  a=o.getElementsByTagName('head')[0];
-  r=o.createElement('script');r.async=1;
-  r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-  a.appendChild(r);
-})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KGZ8MVM');
 
 </script>
+
+<!-- End Google Tag Manager -->
 
 <script type="text/javascript">(function(){var sb=document.createElement('script');sb.type='text/javascript';sb.async=true;sb.src='https://s3.amazonaws.com/z_437er23a/f9b2782c2.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(sb,s);})();</script>
  <%= include_recaptcha_js %>
